<resources>
    <string name="banner_ad_unit_id">ca-app-pub-6260442262526164/1460100737</string>
    <string name="video_ad_unit_id">ca-app-pub-6260442262526164/3994764731</string>
    <string name="splash_ad_unit_id">ca-app-pub-6260442262526164/4413567136</string>
    <string name="native_ad_unit_id">ca-app-pub-6260442262526164/4134365538</string>
    <string name="app_name">小熊跑步</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_title">示例代码</string>
    <string name="base_function">基本功能</string>
    <string name="hud_title">HUD显示</string>
    <string name="extend_title">扩展功能</string>
    <string name="extend_navi_navi">自定义导航</string>
    <string name="navibar_title">路径规划</string>
    <string name="navi_car">驾车</string>
    <string name="navi_foot">步行</string>
    <string name="navi_ride">骑行</string>
    <string name="start_hud_navi">HUD显示</string>
    <string name="complex_function">综合展示</string>
    <string name="navi_empty_car">"驾   车"</string>
    <string name="navi_empty_foot">"步   行"</string>
    <string name="navi_start">"起    点"</string>
    <string name="navi_middle">途经点</string>
    <string name="navi_end">"终    点"</string>
    <string name="navi_strategy">"策    略"</string>
    <string name="navi_route">导航模式</string>
    <string name="navi_navi">开始模拟跑步</string>
    <string name="start_navi_navi">实时导航</string>
    <string name="navi_strategy_speed">速度最快</string>
    <string name="navi_strategy_cost">避免收费</string>
    <string name="navi_strategy_distance">距离最短</string>
    <string name="navi_strategy_nohighway">不走高速快速路</string>
    <string name="navi_strategy_timenojam">时间最短且躲避拥堵</string>
    <string name="navi_strategy_costnojam">避免收费且躲避拥堵</string>
    <string name="navi_speed_value5">5</string>
    <string name="navi_speed_value10">10</string>
    <string name="navi_speed_value15">15</string>
    <string name="navi_speed_value16">16</string>
    <string name="navi_speed_value17">17</string>
    <string name="navi_speed_value18">18</string>
    <string name="navi_speed_value19">19</string>
    <string name="navi_speed_value20">20</string>
    <string name="navi_speed_value25">25</string>
    <string name="navi_speed_value30">30</string>
    <string name="theme_blue">经典蓝</string>
    <string name="theme_pink">可爱粉</string>
    <string name="theme_white">简约白</string>
    <string name="setting">设置</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="yes">"  是  "</string>
    <string name="no">"  否  "</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="daynightmode">"昼夜模式    "</string>
    <string name="deviationrecalculation">"偏航重算    "</string>
    <string name="jamrecalculation">"拥堵重算    "</string>
    <string name="trafficbroadcast">"交通播报    "</string>
    <string name="camerabroadcast">摄像头播报</string>
    <string name="screenon">"屏幕常亮    "</string>
    <string name="routeshow">线路展示</string>
    <string name="tapmap">点击地图设置</string>
    <string name="starttapmap">我的位置（可点击地图设置）</string>
    <string name="walkdescription">步行状态不可用</string>
    <string name="routeinfo">全程   --公里/--分钟    收费 --元</string>
    <string name="routeinfo_1">全程 </string>
    <string name="routeinfo_2">公里/</string>
    <string name="routeinfo_3">"分钟    收费"</string>
    <string name="routeinfo_4">元</string>
    <string name="routeinfo_default">--</string>
    <string name="app_id">5a14ea97</string>
    <string name="mypoistion">我的位置</string>
    <string name="mappoistion">地图点选</string>
    <string name="positioninfo">位置信息</string>
    <string-array name="preference_values_tts_role">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>vixy</item>
        <item>vixq</item>
        <item>vixf</item>
        <item>vixm</item>
        <item>vixl</item>
        <item>vixr</item>
        <item>vixyun</item>
        <item>vixk</item>
        <item>vixqa</item>
        <item>vixying</item>
        <item>vixx</item>
        <item>vinn</item>
        <item>vils</item>
    </string-array>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="abc_action_bar_home_description">
        转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">
        %1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">
        %1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">
        转到上一层级</string>
    <string name="abc_action_menu_overflow_description">
        更多选项</string>
    <string name="abc_action_mode_done">
        完成</string>
    <string name="abc_activity_chooser_view_see_all">
        查看全部</string>
    <string name="abc_activitychooserview_choose_application">
        选择应用</string>
    <string name="abc_capital_off">
        关闭</string>
    <string name="abc_capital_on">
        开启</string>
    <string name="abc_search_hint">
        搜索…</string>
    <string name="abc_searchview_description_clear">
        清除查询</string>
    <string name="abc_searchview_description_query">
        搜索查询</string>
    <string name="abc_searchview_description_search">
        搜索</string>
    <string name="abc_searchview_description_submit">
        提交查询</string>
    <string name="abc_searchview_description_voice">
        语音搜索</string>
    <string name="abc_shareactionprovider_share_with">
        分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">
        通过%s分享</string>
    <string name="abc_toolbar_collapse_description">
        收起</string>
    <string name="accept">
        接受</string>
    <string name="common_google_play_services_enable_button">
        启用</string>
    <string name="common_google_play_services_enable_text">
        您必须先启用 Google Play 服务，然后才能运行%1$s。</string>
    <string name="common_google_play_services_enable_title">
        启用 Google Play 服务</string>
    <string name="common_google_play_services_install_button">
        安装</string>
    <string name="common_google_play_services_install_text">
        您的设备没有安装 Google Play 服务，因此无法运行%1$s。</string>
    <string name="common_google_play_services_install_title">
        获取 Google Play 服务</string>
    <string name="common_google_play_services_notification_ticker">
        Google Play服务出错</string>
    <string name="common_google_play_services_unknown_issue">
        %1$s无法访问 Google Play 服务，请重试。</string>
    <string name="common_google_play_services_unsupported_text">
        您的设备不支持 Google Play 服务，因此无法运行%1$s。</string>
    <string name="common_google_play_services_update_button">
        更新</string>
    <string name="common_google_play_services_update_text">
        您必须先更新 Google Play 服务，然后才能运行%1$s。</string>
    <string name="common_google_play_services_update_title">
        更新 Google Play 服务</string>
    <string name="common_google_play_services_updating_text">
        Google Play 服务当前正在更新，因此您无法运行%1$s。</string>
    <string name="common_google_play_services_wear_update_text">
        必须使用新版 Google Play 服务。该服务很快就会自行更新。</string>
    <string name="common_open_on_phone">
        在手机上打开</string>
    <string name="common_signin_button_text">
        登录</string>
    <string name="common_signin_button_text_long">
        使用 Google 帐号登录</string>
    <string name="create_calendar_message">
        允许广告创建日历活动吗？</string>
    <string name="create_calendar_title">
        创建日历活动</string>
    <string name="debug_menu_ad_information">
        广告信息</string>
    <string name="debug_menu_creative_preview">
        广告素材预览</string>
    <string name="debug_menu_title">
        选择调试模式</string>
    <string name="debug_menu_troubleshooting">
        问题排查</string>
    <string name="decline">
        拒绝</string>
    <string name="place_autocomplete_clear_button">
        清除搜索内容</string>
    <string name="place_autocomplete_search_hint">
        搜索</string>
    <string name="status_bar_notification_info_overflow">
        999+</string>
    <string name="store_picture_message">
        允许广告将图片存储在图库中吗？</string>
    <string name="store_picture_title">
        保存图片</string>
    <string name="accuracy">
        精度</string>
    <string name="activetip">
        "未激活. Xposed中重新打勾&amp; 重启手机."</string>
    <string name="altitude">
        海拔</string>
    <string name="amaps">
        高德地图</string>
    <string name="bearing">
        方位</string>
    <string name="bssid">
        路由器MAC</string>
    <string name="cancel">
        取消</string>
    <string name="common">
        一般</string>
    <string name="country">
        国家</string>
    <string name="currentlocation">
        踩点</string>
    <string name="datanetworktype">
        数据类型</string>
    <string name="delete">
        删除</string>
    <string name="edit">
        修改</string>
    <string name="essid">
        WiFi</string>
    <string name="findlocation">
        数据库</string>
    <string name="floatingcolor">
        悬浮颜色</string>
    <string name="floatingtype">
        悬浮按钮</string>
    <string name="format">
        格式错误</string>
    <string name="google">
        谷歌地图</string>
    <string name="gpsstallites">
        GPS状态&amp;卫星数据</string>
    <string name="gpsstatus">
        GPS</string>
     <string name="helpw">
        帮助</string>
    <string name="icon">
        图标</string>
    <string name="ishasloc">
        位置00无数据或格式错误</string>
    <string name="isselect00">
        无任务选择位置00</string>
    <string name="location">
        位置</string>
    <string name="locationnote">
        纬度,经度,偏移,区域代码,基站代码,备注</string>
    <string name="mock">
        隐藏位置模拟</string>
    <string name="network">
        网络</string>
    <string name="networkoperators">
        网络运营商</string>
    <string name="networkoperatorscode">
        运营商代码</string>
    <string name="networktype">
        网络类型</string>
    <string name="newone">
        新增</string>
    <string name="nocellinfo">
        无法获取手机网络信息</string>
    <string name="opengps">
        打开GPS才能定位啊</string>
    <string name="operatorfix">
        运营商伪装修复</string>
    <string name="operators">
        运营商</string>
    <string name="ophit">
        MCC+MNC,5..6</string>
    <string name="packagename">
        包名</string>
    <string name="permission">
        给权限才能定位啊</string>
    <string name="phonetype">
        手机类型</string>
    <string name="pkgnamelist">
        包名列表</string>
    <string name="positioning">
        定位中</string>
    <string name="ratio">
        速度系数</string>
    <string name="requestloc">
        禁止使用GPS</string>
    <string name="requestloctip">
        用于省电</string>
    <string name="rotationratio">
        旋转系数</string>
    <string name="searchtip">
        输入包名,应用名关键字</string>
    <string name="searchtip2">
        备注的关键字,比如 上海 虹桥路.空格分割</string>
    <string name="simoperators">
        SIM运营商</string>
    <string name="speed">
        速度</string>
    <string name="task1">
        任务一</string>
    <string name="task2">
        任务二</string>
    <string name="task3">
        任务三</string>
    <string name="tip0">
        点击以获取坐标</string>
    <string name="tip1">
        已复制到剪切板且保存至位置00</string>
    <string name="tip2">
        已复制到剪切板</string>
    <string name="desc">Daily Step Count</string>
    <string name="title1">Total</string>
    <string name="unit1">Steps</string>
</resources>