<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey" >

    <LinearLayout
        android:id="@+id/navibarcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioGroup
                android:id="@+id/navi_method_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/navi_driver_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/navi_car"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <RadioButton
                    android:id="@+id/navi_walk_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/navibar_margin_method"
                    android:checked="false"
                    android:text="@string/navi_foot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/navistarttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/navibar_margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:text="@string/navi_start"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <AutoCompleteTextView
                    android:id="@+id/navi_start_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/navibar_margin_right"
                    android:layout_toRightOf="@id/navistarttext"
                    android:focusable="false"
                    android:hint="@string/mypoistion"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:textSize="@dimen/navibar_text_size" >
                </AutoCompleteTextView>

                <ImageView
                    android:id="@+id/navi_start_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignBottom="@id/navi_start_edit"
                    android:layout_alignRight="@id/navi_start_edit"
                    android:layout_alignTop="@id/navi_start_edit"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/margin_right"
                    android:src="@drawable/downarrow" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/way_point_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navibar_edit_height"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/navimiddletext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/navibar_margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:text="@string/navi_middle"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <EditText
                    android:id="@+id/navi_way_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/navibar_margin_right"
                    android:layout_toRightOf="@id/navimiddletext"
                    android:focusable="false"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:textSize="@dimen/navibar_text_size" >
                </EditText>

                <ImageView
                    android:id="@+id/navi_way_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignBottom="@id/navi_way_edit"
                    android:layout_alignRight="@id/navi_way_edit"
                    android:layout_alignTop="@id/navi_way_edit"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/margin_right"
                    android:src="@drawable/downarrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/naviendtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/navibar_margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:text="@string/navi_end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <EditText
                    android:id="@+id/navi_end_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/navibar_margin_right"
                    android:layout_toRightOf="@id/naviendtext"
                    android:focusable="false"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:textSize="@dimen/navibar_text_size" >
                </EditText>

                <ImageView
                    android:id="@+id/navi_end_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignBottom="@id/navi_end_edit"
                    android:layout_alignRight="@id/navi_end_edit"
                    android:layout_alignTop="@id/navi_end_edit"
                    android:layout_marginRight="@dimen/margin_right"
                    android:src="@drawable/downarrow" />
            </RelativeLayout>

            <!-- <RelativeLayout
                android:id="@+id/strategy_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/navistrategytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/navibar_margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:text="@string/navi_strategy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <AutoCompleteTextView
                    android:id="@+id/navi_strategy_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/navibar_margin_right"
                    android:layout_toRightOf="@id/navistrategytext"
                    android:focusable="false"
                    android:hint="@string/navi_strategy_speed"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:textSize="@dimen/navibar_text_size" >
                </AutoCompleteTextView>

                <ImageView
                    android:id="@+id/navi_strategy_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignBottom="@id/navi_strategy_edit"
                    android:layout_alignRight="@id/navi_strategy_edit"
                    android:layout_alignTop="@id/navi_strategy_edit"
                    android:layout_marginRight="@dimen/margin_right"
                    android:src="@drawable/downarrow" />
            </RelativeLayout> -->

            <RelativeLayout
                android:id="@+id/speed_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/navispeedtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/navibar_margin_left"
                    android:layout_marginRight="@dimen/margin_right"
                    android:text="速　度"
                    android:textColor="@color/black"
                    android:textSize="@dimen/navibar_text_size" />

                <AutoCompleteTextView
                    android:id="@+id/navi_speed_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/navibar_margin_right"
                    android:layout_toRightOf="@id/navispeedtext"
                    android:focusable="false"
                    android:hint="@string/navi_speed_value5"
                    android:paddingBottom="@dimen/margin_bottom"
                    android:paddingTop="@dimen/margin_top"
                    android:textSize="@dimen/navibar_text_size" >
                </AutoCompleteTextView>

                <ImageView
                    android:id="@+id/navi_speed_image"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navibar_edit_height"
                    android:layout_alignBottom="@id/navi_speed_edit"
                    android:layout_alignRight="@id/navi_speed_edit"
                    android:layout_alignTop="@id/navi_speed_edit"
                    android:layout_marginRight="@dimen/margin_right"
                    android:src="@drawable/downarrow" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/navi_navi_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/navibar_button_height"
                        android:layout_marginRight="@dimen/navibar_margin_right"
                        android:paddingBottom="@dimen/margin_bottom"
                        android:paddingTop="@dimen/margin_top"
                        android:text="@string/navi_navi" />

                    <Button
                        android:id="@+id/navi_route_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/navibar_button_height"
                        android:layout_marginLeft="@dimen/navibar_margin_left"
                        android:paddingBottom="@dimen/margin_bottom"
                        android:paddingTop="@dimen/margin_top"
                        android:text="模拟步数倍率" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/navibarcontainer" />

</RelativeLayout>